// diagram link:  
// https://dbdiagram.io/d/648-EzJobs-670b818b97a66db9a3c99510

// Users info
Table users {
  id int [pk, increment]
  username varchar(50) [not null, unique]
  email varchar(50) [not null, unique]
  password varchar(200) [not null]
}

// Job Applications info
Table jobs {
  id int [pk, increment]
  user_id int [not null]
  column_id int  [not null]
  current_status varchar(20) [not null]
  company varchar(50) [not null]
  position varchar(50) [not null]
  salary varchar(50)
  type varchar(20)
  location varchar(50)
  link varchar(50)
  description varchar(200)
  user_note varchar(200)
  date_applied date
  date_scheduled timestamp

  indexes {
    user_id [name:"idx_jobs_user_id"]
    column_id [name:"idx_jobs_column_id"]
  }
}

Ref: jobs.column_id > columns.id [delete: cascade]
Ref: jobs.user_id > users.id [delete: cascade]


// Kanban board column to track job status, not customizable
Table columns {
  id int [pk, increment]
  name varchar(20) [not null]
  color varchar(20) [not null]
  position int [not null, note:"the order of this column in the Kanban board"]
}

Ref: columns.user_id > users.id [delete: cascade]

// Job cards in each column
Table column_cards {
  id int [pk, increment]
  user_id int [not null]
  job_id int [not null]
  column_id int [not null]
  position varchar(20) [not null, note:"position of cards in the column, lexorank"]


// ensures card position uniqueness within each user’s board
// add in sql file
// UNIQUE ("user_id", "column_id", "position")
}

Ref: column_cards.column_id > columns.id [delete: cascade]
Ref: column_cards.job_id > jobs.id [delete: cascade]
Ref: column_cards.user_id > users.id [delete: cascade]


// Job Statistics Number
// Update by DB automatically
Table job_stats {
  id int [pk, increment]
  user_id int [not null, unique]
  interested int [default: 0, note:"columns.id=1"]
  pending int [default: 0, note:"columns.id=2"]
  in_progress int [default: 0, note:"columns.id=3"]
  offer int [default: 0, note:"columns.id=4"]
  declined int [default: 0, note:"columns.id=5"]
  ghosted int [default: 0, note:"columns.id=6"]
  follow_up int [default: 0, note:"columns.id=7"]
  applied int [default: 0]
  interview int [default: 0]
  total int [default: 0]
}

Ref: users.id - job_stats.user_id [delete: cascade]



// Contacts info
Table contacts {
  id int [pk, increment]
  user_id int [not null]
  user_note varchar(200)
  name varchar(50) [not null]
  position varchar(50)
  company varchar(50)
  email varchar(50)
  phone_num varchar(50)

   indexes {
    user_id [name:"idx_contacts_user_id"]
  }  
}

Table contact_jobs {
  contact_id int [not null]
  job_id int [not null]
  

// add unique pair in sql file
// UNIQUE ("contact_id", "job_id")

}

Ref: contacts.user_id > users.id [delete: cascade]
Ref: contact_jobs.contact_id > contacts.id [delete: cascade]
Ref: contact_jobs.job_id > jobs.id [delete: cascade]


// Prompts info for AI resume
Table ai_resume {
  id int [pk, increment]
  user_id int [not null, unique]
  user_token varchar(50) [unique]
  fullname varchar(50) [not null]
  personal_information text
  relevant_skills text
  education text
  experience text
  projects text
  ai_info text
  ai_skills text
  ai_edu text
  ai_exp text
  ai_proj text
}


Ref: ai_resume.user_id > users.id [delete: cascade]

// Prompts info for AI_interview_prep
Table ai_interview_prep {
  id int [pk, increment]
  user_id int [not null]
  company varchar(50)
  job_position varchar(50)
  job_description varchar(200)
  ai_response varchar(200) [note:"Generated by OpenAI API"]

  indexes {
    user_id [name:"idx_ai_interview_user_id"]
  }
}

Ref: ai_interview_prep.user_id > users.id [delete: cascade]